# inn-models-kglp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  basic_setup.sh  flake.nix  install.sh  pyproject.toml  uninstall.sh
configs/: config.yaml
configs/dataset/: fb15k237.yaml  wn18rr.yaml
configs/experiment/: inn_compgcn_fb15k237_v1.yaml  inn_compgcn_fb15k237_v4.yaml  inn_lightgcn_fb15k237_v2.yml  inn_lightgcn_fb15k237_v4.yml  inn_ours_mlp_fb15k237_v1.yaml  inn_ours_mlp_fb15k237_v2.yaml  inn_ours_mlp_fb15k237_v3.yaml  inn_ours_mlp_fb15k237_v4.yaml  inn_rotate_fb15k237_v1.yaml  inn_rotate_fb15k237_v2.yaml  inn_rotate_fb15k237_v3.yaml  inn_rotate_fb15k237_v4.yaml
configs/experiments/inn_compgcn/fb15k237/: inn_compgcn_v1_fb15k237.yaml  inn_compgcn_v2_fb15k237.yaml  inn_compgcn_v3_fb15k237.yaml  inn_compgcn_v4_fb15k237.yaml  inn_compgcn_v5_fb15k237.yaml
configs/experiments/inn_lightgcn/fb15k237/: inn_lightgcn_v1_fb15k237.yml  inn_lightgcn_v3_fb15k237.yml  inn_lightgcn_v5_fb15k237.yaml
configs/experiments/inn_ours_mlp/fb15k237/: inn_ours_mlp_v1_fb15k237.yaml  inn_ours_mlp_v2_fb15k237.yaml  (+3 more)
configs/model/: inn_compgcn.yaml  inn_lightgcn.yaml  inn_ours_mlp.yaml  inn_rotate.yaml  inn_transe.yaml
src/: main.py  test.py  train.py
src/core/: evaluation.py  intervals.py  metrics.py  model_utils.py  training.py
src/data/: dataset.py
src/models/: __init__.py  inn_compgcn.py  inn_lightgcn.py  inn_ours_mlp.py  inn_rotate.py  inn_transe.py
src/utils/: runtime.py
tests/: test_dataloader.py  test_intervals.py  test_logging.py  test_training.py
(+10 files in other folders)
